--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "start": "ng serve",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "ng test",
+        "lint": "ng lint",
+        "pack_button": "cd dist/button && npm pack"
     },
     "private": true,
     "dependencies": {
@@ -23,10 +25,18 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-      "@angular-devkit/build-angular": "^14.2.3",
+        "@angular-devkit/build-angular": "^14.2.3",
+        "@angular-eslint/builder": "14.1.1",
+        "@angular-eslint/eslint-plugin": "14.1.1",
+        "@angular-eslint/eslint-plugin-template": "14.1.1",
+        "@angular-eslint/schematics": "14.1.1",
+        "@angular-eslint/template-parser": "14.1.1",
         "@angular/cli": "~14.2.3",
         "@angular/compiler-cli": "^14.2.0",
         "@types/jasmine": "~4.0.0",
+        "@typescript-eslint/eslint-plugin": "5.37.0",
+        "@typescript-eslint/parser": "5.37.0",
+        "eslint": "^8.23.1",
         "jasmine-core": "~4.3.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
